@@ -29,6 +29,6 @@ EXPOSE 8081
 ENV SERVER_PORT=8081 \
     SPRING_PROFILES_ACTIVE=docker \
     LOG_PATH=/app/logs \
-    JAVA_OPTS="-XX:+UseZGC -XX:MaxRAMPercentage=75.0"
+    JAVA_OPTS="-XX:+UseG1GC -Xms128m -Xmx512m -Xss512k -XX:MaxMetaspaceSize=160m -XX:+ExitOnOutOfMemoryError"
 
 ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
